--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,6 @@ body, html {
     padding: 0;
     background: white;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
